--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -31,10 +31,10 @@ RELEASE_FLAGS = -DNDEBUG -O2
 FLAGS += $(if $(DEBUG_),$(DEBUG_FLAGS),$(RELEASE_FLAGS))
 ADD_FLAGS = -D HASH_PROTECT -D PENGUIN_PROTECT
 
-DIRS = assembly asm_code instructions
+DIRS = assembly asm_code instructions labels
 BUILD_DIRS = $(DIRS:%=$(BUILD_DIR)/%)
 
-SOURCES = main.c assembly/assembly.c asm_code/asm_code.c instructions/instructions.c
+SOURCES = main.c assembly/assembly.c asm_code/asm_code.c instructions/instructions.c labels/labels.c
 
 SOURCES_REL_PATH = $(SOURCES:%=$(SRC_DIR)/%)
 OBJECTS_REL_PATH = $(SOURCES:%.c=$(BUILD_DIR)/%.o)
